--- a/index.html
+++ b/index.html
@@ -14,10 +14,20 @@
 -->
 
 <body>
-    <p>test</p>
+    <h> The best paragraph you have ever read is just below </h>
 
+    <p>
+         This site is all about the best person in the world. <br/>
+         Not Hardman. <br/>
+         Me Kyle. <br/>
+        </p>
+
+        <a href="dontclickme.html"> index.html </a>
+        
     <img src="images/IMG_3756.PNG" width="360" height="807"
 alt="Journey trying to slide into #1 in my snap. Photo credit: Journey"/>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9xofljau9xk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
   
 </body>
