--- a/Don'tclickme.html
+++ b/Don'tclickme.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>HTML project thing</title>
+    <title>dont click me one</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=yes"/>
 </head>
 
+<body>
+    <!-- erika helped me alot with this so it's her code for now at least-->
+    <form method="get">
 
+        <label for="favourite person"><b><i>favourite person</i></b></label>
+        <Input name= "favourite person" id= "person" placeholder= "Kyle Cook" size="40" maxlenght="100"/>
+        <br/>
+
+        <label for="is kyle your favourite person">is kyle your favourite person:</label>
+        <Input name= "is kyle your favourite person" id= "is kyle your favourite person" placeholder= "yes" size="10" maxlenght="7"/>
+        <br/>
+
+        <label for="what city does kyle live in">what city does kyle live in</label>
+        <Input name= "what city does kyle live in" id= "what city does kyle live in" placeholder="city here" size="20" maxlenght="20"/>
+        <br/>
+
+
+
+
+    </form>
+<body\>
 </html>
