--- a/index.html
+++ b/index.html
@@ -14,18 +14,26 @@
 -->
 
 <body>
-    <h> The best paragraph you have ever read is just below </h>
+    <h1> The best paragraph you have ever read is just below </h1> <br/>
 
     <p>
          This site is all about the best person in the world. <br/>
          Not Hardman. <br/>
-         Me Kyle. <br/>
+         Me, Kyle. <br/>
         </p>
 
-        <a href="dontclickme.html"> index.html </a>
+        <a href="dontclickme.html"> dontclickme.html </a> <br/>
+
+        <h2> some of the best photos in the entire world </h2>
         
     <img src="images/IMG_3756.PNG" width="360" height="807"
-alt="Journey trying to slide into #1 in my snap. Photo credit: Journey"/>
+alt="Journey trying to slide into #1 in my snap. Photo credit: Journey"/> <br/>
+
+<img src="images/IMG_0134.PNG" width="360" height="707"
+alt="My favourite sign in the whole entire world"/> <br/>
+
+<img src="images/IMG_4682.PNG" width="360" height="607"
+alt="My twitter profile picture otherwise known as depresso"/> <br/>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/9xofljau9xk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
